# Taller1EDD

./: CMakeLists.txt  Cancion.cpp  Nodo.hpp  Primer Taller  README.md  Reproductor.cpp  Reproductor.hpp  SongList.cpp  main.cpp
Clases/: Cancion.cpp  Cancion.hpp
Core/: Cancion.hpp  Reproductor.cpp  Reproductor.hpp
Structure/: Nodo.hpp  SongList.hpp
